overlap issue solved

--- a/my-react-app/src/Components/Hero/Hero.css
+++ b/my-react-app/src/Components/Hero/Hero.css
@@ -1,5 +1,5 @@
 .hero {
-  height: 100vh;
+  /* height: 100vh; */
   background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
   display: flex;
 }
