--- a/my-react-app/src/Components/NewCollections/NewCollections.css
+++ b/my-react-app/src/Components/NewCollections/NewCollections.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  height: 90vh;
+  /* height: 90vh; */
 }
 .new-collections h1 {
   color: #171717;
