--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -1,6 +1,9 @@
 * {
   margin: 0;
 }
+img {
+  width: 100%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
